@@ -1,3 +1,4 @@
+* Add domain to dictionary schema
 * Fill main language in ir.configuration at database initialization
 * Remove support for Python 2.7
 * Check Rule also after modification
